[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Enter Sansman Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Objects/Menu/Label.gd" type="Script" id=2]
[ext_resource path="res://Objects/Menu/LoadScene.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.4, 0.129412, 0.054902, 1 )
shadow_color = Color( 0.105882, 0.0313726, 0, 0.917647 )

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Button" type="Button"]
margin_right = 300.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 2 )
flat = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.462745, 0.427451, 0.368627, 1 )
custom_colors/font_color_shadow = Color( 0.811765, 0.623529, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Label"
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Label"]

[connection signal="mouse_entered" from="." to="Label" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="Label" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="Label" method="_on_Button_pressed"]
[connection signal="timeout" from="Label/Timer" to="Label" method="_on_Timer_timeout"]
